# gridthings

./: .bumpversion.cfg  .gitpod.Dockerfile  .gitpod.dockerfile  .gitpod.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/: pull_request_template.md
.github/workflows/: publish_pypi.yaml  run-tests.yaml
examples/AOC_2021_9/: README.md  Smoke Basin.ipynb
examples/advent_of_code_2021/: day_09.ipynb  day_11.ipynb  day_9.ipynb
examples/projecteuler/: problem_0011.ipynb
src/gridthings/: __init__.py  cell.py  collection.py  grid.py  row.py  typed_grids.py
tests/: test_active_methods.py  test_cell.py  test_collection.py  test_grid.py  test_init.py  test_pandas.py  test_row.py
