[tool.poetry]
name = "gridthings"
version = "0.1.1"
description = "Python library for working with Grid-like structures (e.g. tic-tac-toe)"
authors = ["Matt Kafonek <matt.kafonek@noteable.io>"]
homepage = "https://github.com/kafonek/gridthings"
repository = "https://github.com/kafonek/gridthings"
license = "BSD-3-Clause"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
jupyter = {version = "^1.0.0", optional = true}
pandas = {version = "^1.3.4", optional = true}
importlib-metadata = "^4.8.2"

[tool.poetry.dev-dependencies]
tox = "^3.24.4"
mypy = "^0.910"
pre-commit = "^2.16.0"
isort = "^5.10.1"
black = "^21.12b0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[tool.poetry.extras]
examples = ["jupyter", "pandas"]

[tool.poetry-version-plugin]
source = "init"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
